// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Buying render 1`] = `
<div
  className="p-2 border p-3 rounded"
>
  <div
    className="flex justify-between items-center "
  >
    <h3
      className="mb-0"
    >
      Buy
       HIVE
    </h3>
    <div>
      <small
        className="flex cursor-pointer"
        onClick={[Function]}
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Available
          :
        </div>
        <div>
          dummy value
        </div>
      </small>
      <small
        className="flex"
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Lowest ask
          :
        </div>
        <div
          className="pointer"
          onClick={[Function]}
        >
          9.000
        </div>
      </small>
    </div>
  </div>
  <hr />
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Price
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value="6.900000"
        />
        <span
          className="rounded-left input-group-text"
        >
          HBD/HIVE
        </span>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Amount
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value={0}
        />
        <span
          className="rounded-left input-group-text"
        >
          HIVE
        </span>
      </div>
    </div>
    <div
      className="mb-4 form-group"
    >
      <label
        className="form-label"
      >
        Total
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value={0}
        />
        <span
          className="rounded-left input-group-text"
        >
          HBD
        </span>
      </div>
    </div>
    <button
      className="btn btn-primary btn-block"
      disabled={true}
      type="submit"
    >
      Buy
    </button>
  </form>
</div>
`;

exports[`(1) Selling render 1`] = `
<div
  className="p-2 border p-3 rounded"
>
  <div
    className="flex justify-between items-center "
  >
    <h3
      className="mb-0"
    >
      Sell
       HIVE
    </h3>
    <div>
      <small
        className="flex cursor-pointer"
        onClick={[Function]}
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Available
          :
        </div>
        <div>
          dummy value
        </div>
      </small>
      <small
        className="flex"
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Highest bid
          :
        </div>
        <div
          className="pointer"
          onClick={[Function]}
        >
          9.000
        </div>
      </small>
    </div>
  </div>
  <hr />
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Price
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value="6.900000"
        />
        <span
          className="rounded-left input-group-text"
        >
          HBD/HIVE
        </span>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Amount
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value={0}
        />
        <span
          className="rounded-left input-group-text"
        >
          HIVE
        </span>
      </div>
    </div>
    <div
      className="mb-4 form-group"
    >
      <label
        className="form-label"
      >
        Total
      </label>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="0.0"
          value={0}
        />
        <span
          className="rounded-left input-group-text"
        >
          HBD
        </span>
      </div>
    </div>
    <button
      className="btn btn-primary btn-block"
      disabled={true}
      type="submit"
    >
      Sell
    </button>
  </form>
</div>
`;
